# osgPhysX

./: .gitignore  CMakeLists.txt  LICENSE  README
cmake/: FindPhysX3.cmake
physics/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  CharacterController.cpp  CharacterController.h  Engine.cpp  Engine.h  ParticleUpdater.cpp  ParticleUpdater.h  PhysicsUtil.cpp  PhysicsUtil.h  Vehicle.cpp  Vehicle.h  VehicleManager.cpp  VehicleManager.h
tests/: CMakeLists.txt  character_animation_test.cpp  character_controller_test.cpp  hello_physics_world_test.cpp  physics_heightfield_test.cpp  physics_vehicle_test.cpp
utils/: CMakeLists.txt  FollowNodeManipulator.cpp  FollowNodeManipulator.h  InputManager.cpp  InputManager.h  PlayerAnimation.cpp  PlayerAnimation.h  SceneUtil.cpp  SceneUtil.h
utils/ois/: OISInputManager.cpp  OISPrereqs.h
utils/ois/iphone/: iPhoneInputManager.h  iPhoneInputManager.mm  iPhoneMultiTouch.mm
utils/ois/mac/: CocoaMouse.mm  MacHIDManager.cpp  MacHelpers.h
